# pytest-shard-cloudc

./: LICENSE  README.md  README.zh-TW.md  noxfile.py  pyproject.toml  setup.cfg  support_xdist_group_refactor_plan.md
.circleci/: config.yml
.github/workflows/: ci.yml  publish-testpypi.yml  publish.yml
demo/demo30_tests/: test_group_a.py  test_group_c.py
demo/demo_duration_tests/: test_workload.py
demo/demo_tests/: conftest.py  test_comparisons.py  test_types.py
demo/demo_xdist_group_tests/: conftest.py  test_xdist_group_demo.py
demo30_tests/: conftest.py  test_group_b.py
demo_duration_tests/: conftest.py
demo_tests/: test_arithmetic.py  test_collections.py  test_strings.py
doc/: allure-integration.md  allure-integration.zh-TW.md  demo-sessions.md  demo-sessions.zh-TW.md  sharding-modes.md  sharding-modes.zh-TW.md
pytest_shard/: __init__.py  pytest_shard.py
tests/: test_pytest_shard.py
