[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytest-shard-cloudc"
version = "1.2.2"
description = "Shard tests to support parallelism across multiple machines."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Cloud Chen", email = "wolke1007@users.noreply.github.com" },
]
keywords = ["pytest", "shard", "parallel", "distributed", "testing", "ci"]
dependencies = [
  "pytest",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: Pytest",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Testing",
]

[project.optional-dependencies]
dev = [
  "allure-pytest",
  "build",
  "bump-my-version",
  "hypothesis",
  "mypy",
  "nox",
  "ruff",
]

[project.urls]
Homepage = "https://github.com/wolke1007/pytest-shard-cloudc"
Repository = "https://github.com/wolke1007/pytest-shard-cloudc"
"Original Project" = "https://github.com/AdamGleave/pytest-shard"

[project.entry-points.pytest11]
pytest-shard-cloudc = "pytest_shard.pytest_shard"

[tool.hatch.build.targets.wheel]
packages = ["pytest_shard"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
ignore = ["E203"]

[tool.mypy]
python_version = "3.11"
files = ["pytest_shard"]

[tool.pytest.ini_options]
addopts = "-ra"

[tool.coverage.report]
exclude_lines = ["pragma: no cover"]

[tool.coverage.run]
include = ["pytest_shard/", "tests/*"]

[tool.bumpversion]
current_version = "1.2.2"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]

[[tool.bumpversion.files]]
filename = "pyproject.toml"

[[tool.bumpversion.files]]
filename = "uv.lock"
